# lobster-academy

./: .gitignore  ALGORITHM-PLAN.md  AUDIT-REPORT.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT-ANALYSIS.md  FINAL-AUDIT.md  LICENSE  README.md  SECURITY-AUDIT.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: pull_request_template.md
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
attacks/: CONTRIBUTING.md  README.md  __init__.py  registry.py  updater.py  validate.py
commercial/: landing-page.md  pricing.md
components/: Architecture.tsx  CLI.tsx  ErrorBoundary.tsx  Features.tsx  Footer.tsx  Hero.tsx  Integrations.tsx  LanguageSwitcher.tsx  Navbar.tsx  Stats.tsx
dashboard/: package-lock.json  package.json  tailwind.config.js
docs/: MOAT-STRATEGY.md  PRD-v0.1.md  WEBSITE-GAP-ANALYSIS.md  api-reference.md  audit_report.md  quickstart.md  security.md
examples/: basic-usage.ts
integrations/: README.md
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/src/lobster_academy_langchain/: __init__.py  callback.py  tool_wrapper.py
integrations/langchain/tests/: test_callback.py
integrations/llamaindex/: README.md  pyproject.toml
integrations/llamaindex/src/lobster_academy_llamaindex/: __init__.py  callback.py
integrations/llamaindex/tests/: test_callback.py
lib/: auth-session.ts  auth.ts  i18n.tsx  mock-data.ts  rate-limit.ts  store.ts
promo/: README.md  devto-article.md  github-discussion-v2.md  github-post.md  hackernews.md  medium-article.md  producthunt.md  reddit-final-3.md  reddit-post.md  (+5 more)
python-sdk/: README.md  pyproject.toml
python-sdk/src/lobster_academy/: __init__.py  academy.py  adversarial.py  attack_scenarios.py  cli.py  exceptions.py  recorder.py  redactor.py  signer.py  types.py
python-sdk/src/lobster_academy/storage/: __init__.py  clickhouse_adapter.py  elasticsearch_adapter.py  redis_adapter.py  s3_adapter.py
python-sdk/tests/: test_academy.py  test_adversarial.py  test_edge_cases.py  test_recorder.py  test_redactor.py  test_scenarios.py  test_signer.py  test_storage_adapters.py  test_stress.py
(+177 files in other folders)
