[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-academy"
version = "0.1.0"
description = "AI Agent behavior evidence platform - record, redact, evaluate, attack, sign"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["cryptography>=41.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]
