[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-academy"
version = "0.1.0"
description = "AI Agent Blackbox SDK — Recording, Redaction, Evaluation, Certification"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["cryptography>=41.0"]
keywords = ["ai-agent", "security", "evaluation", "blackbox", "recording"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[project.scripts]
lobster = "lobster_academy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
