[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster-academy-langchain"
version = "0.1.0"
description = "LangChain integration for Lobster Academy - AI Agent behavior evidence"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "langchain>=0.1.0",
    "lobster-academy>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]
